--- a/semaine09/css/styles.css
+++ b/semaine09/css/styles.css
@@ -34,19 +34,29 @@ nav li:nth-child(2){
 }
 
 /* Exercice 06 */
-
+.exercice06 li:nth-child(even){
+    background-color: red;
+}
 
 /* Exercice 07 */
-
+.exercice07 li:nth-child(odd){
+    background-color: red;
+}
 
 /* Exercice 08 */
-
+.exercice08 li:nth-child(-n + 3){
+    background-color: red;
+}
 
 /* Exercice 09 */
-
+.exercice09 li:nth-child(99){
+    background-color: red;
+}
 
 /* Exercice 10 */
-
+.exercice10 li:nth-child(-n + 22) + li:nth-child(n + 14){
+    background-color: red;
+}
 
 /* Exercice 11 */
 
